err.log
/tmp/circt-reduce-2a6847.mlir:1:1: error: hw.module named 'miter' not found
module {
^
===-------------------------------------------------------------------------===
                         ... Execution time report ...
===-------------------------------------------------------------------------===
  Total Execution Time: 0.0016 seconds

  ----Wall Time----  ----Name----
    0.0005 ( 30.3%)  Parse MLIR input
    0.0001 (  3.8%)  StripOMPass
    0.0000 (  1.7%)  StripEmitPass
    0.0001 (  9.5%)  ExternalizeRegisters
    0.0000 (  1.3%)    (A) circt::hw::InstanceGraph
    0.0000 (  2.3%)  LowerToBMC
    0.0008 ( 52.3%)  Rest
    0.0016 (100.0%)  Total
